feat(ui): LaTeX formatter, 3D globe rotation, hex tessellation, stats year windows, backface culling